--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -541,21 +541,43 @@
             </trans-unit>
             <trans-unit id="match.email.user">
                 <source>match.email.user</source>
-                <target>Hello %user_name%!
+                <target>(This message will follow in English)
+Hej %user_name%!
+
+Vad kul att du vill vara med i Kompisbyrån!
+
+Vi har hittat en %match_music_friend% till dig. %match_his_her% heter %match_name% och ni båda gillar %match_categories%.
+
+%match_name% är %match_age% år gammal, bor i %match_area% och kommer från %match_from%. %match_gender% träffas gärna i %match_city%.
+
+E-postadressen till din %match_music_friend% är: %match_email% Vi har också skickat din e-postadress till din %match_music_friend%.
+
+Maila nu din %match_music_friend% och bestäm var och när ni ska träffas, skicka mailet inom en vecka. Vi rekommenderar att ni ses på ett %match_fika_buddies% i ungefär en timme.
+
+Skicka gärna ett foto och berätta om hur du tycker att mötet var. Vi vill gärna dela med oss av det för att uppmuntra fler till att vara med och få information om Kompisbyrån.
+
+Om du har frågor, kontakta oss! Vi önskar er ett trevligt möte!
+
+Bästa hälsningar
+Vännerna på Kompisbyrån
+
+--------- English version ---------
+
+Hello %user_name%!
 
 Great that you want to be part of Kompisbyrån!
 
-We have found a %match_music_friend% for you. %match_his_her% name is %match_name% and both of you like %match_categories%.
+We have found a person for you to meet. The person you will meet is %match_name% and both of you like %match_categories%.
 
-%match_name% is %match_age% years old, lives in %match_area% and is from %match_from%. %match_gender% would like to meet you in %match_city%.
+%match_name% is %match_age% years old, lives in %match_area% and is from %match_from%. %match_name% would like to meet you in %match_city%.
 
-The email adress to your %match_music_friend% is:  %match_email%. We have also sent your email adress to your %match_music_friend%.
+The email adress to %match_name% is: %match_email%. We have also sent your email adress to %match_name%.
 
-Your next step is to email your %match_music_friend% and decide on when and where to meet. Send the email within one week. We recommend that you meet at a %match_fika_buddies% for about one hour.
+Your next step is to email %match_name% and decide on when and where to meet. Send the email within one week. We recommend that you meet at a public place for about one hour.
 
-We would love to if you could send a photo from %match_your_fika% and tell us about it! We want to share your story to encourage more to be part of Kompisbyrån.
+We would love to if you could send a photo and tell us about your meeting! We want to share your story to encourage more to be part of Kompisbyrån.
 
-If you have any questions, please contact us! We wish you a %match_fika_buddy%.
+If you have any questions, please contact us! We wish you a nice meeting!
 
 Best regards,
 Your friends at Kompisbyrån</target>
