--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -598,7 +598,7 @@ Vännerna på Kompisbyrån
 
 Hello %user_name%!
 
-Great that you want to be part of Kompisbyrån!
+Thank you for being a part of Kompisbyrån!
 
 We have found a person for you to meet. The person you will meet is %match_name% and both of you like %match_categories%.
 
@@ -606,14 +606,19 @@ We have found a person for you to meet. The person you will meet is %match_name%
 
 The email adress to %match_name% is: %match_email%. We have also sent your email adress to %match_name%.
 
-Your next step is to email %match_name% and decide on when and where to meet. Send the email within one week. We recommend that you meet at a public place for about one hour.
+Please follow the steps below:
 
-We would love to if you could send a photo and tell us about your meeting! We want to share your story to encourage more to be part of Kompisbyrån.
+1. Send an email to %match_name% and decide date, time and place where you should meet. Send the email within 7 days. We recommend that you meet at a public place for about 1 hour, and exchange phone numbers so that you can reach each other.
 
-If you have any questions, please contact us! We wish you a nice meeting!
+2. You meet each other!
+
+3. During or after your meeting, we would be very happy if you would like to take a photo and write some sentences about your experience. Please, send the photo greeting to: matchning@kompisbyran.se so that we can share your story digitally to encourage more people to join.
+
+Please, contact us if you have any questions! We wish you a nice meeting!
 
 Best regards,
-Your friends at Kompisbyrån]]></target>
+Your friends at Kompisbyrån
+]]></target>
             </trans-unit>
             <trans-unit id="match.email.user.subject">
                 <source>match.email.user.subject</source>
