--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -445,13 +445,17 @@
                             When you have registered your application, you warrant that your information is correct and agree that the information: may be treated according to PUL and is saved in Kompisbyrån's register so that we can find new friends for you, that your information and e-mail is sent to your new friend, and that we will invite you to Kompisbyrån's activities or offerings. If you want to adjust your submitted information that is registered, please log in with your e-mail and password and update your profile.
                         </li>
                         <li>
-                            Our ambition is to find a new friend for you within 14 days, but it may take both shorter and longer time depending on your profile and the number of people who also want to meet new friends. That means that you may have to wait.
+                            Our ambition is to find a new friend for you within 30 days, but it may take both shorter and longer time depending on your profile and the number of people who also want to meet new friends. That means that you may have to wait.
                         </li>
                         <li>
                             We confirm that we have received your application, by sending an e-mail to you, often within 48 hours.
                         </li>
                         <li>
                             You should send an e-mail to your new friend and decide when and where to meet within 7 days.
+                        </li>
+                        <li>
+                            You need to treat each other in a respectful manner. Remember to be clear in you communication 
+                            with each other as language differences can create misunderstandings. 
                         </li>
                         <li>
                             A meeting with your Fika or Music friend takes place once. If you like each other, you are welcome to meet again by your own. If you want to meet a new Fika or Music friend, please log in and make a new friend request.
