--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -443,7 +443,7 @@
                             som finns registrerade hos oss, vänligen logga in med din e-mail och ditt lösenord och uppdatera din profil.
                         </li>
                         <li>
-                            Vår ambition är att hitta en ny kompis till dig inom 14 dagar, men det kan ta både kortare och längre tid
+                            Vår ambition är att hitta en ny kompis till dig inom 30 dagar, men det kan ta både kortare och längre tid
                             beroende på din profil och hur många personer som också vill träffa nya kompisar. Det innebär att du kan
                             få vänta.
                         </li>
@@ -452,6 +452,10 @@
                         </li>
                         <li>
                             Du bör skicka ett e-mail till din nya fikakompis och bestämma när ni kan träffas inom 7 dagar.
+                        </li>
+                        <li>
+                            Du måste behandla alla på ett respektfullt sätt. Tänk på att vara tydliga mot varandra då 
+                            språkskillnader kan skapa missuppfattningar.
                         </li>
                         <li>
                             En kompisfika eller ett musikmöte sker en gång. Gillar ni varandra får ni gärna träffas igen själva. Vill du träffa en
