--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -8,7 +8,7 @@
             </trans-unit>
             <trans-unit id="error.active_request">
                 <source>error.active_request</source>
-                <target>You still have an active request.</target>
+                <target>You already have an active friend request at Kompisbyrån.</target>
             </trans-unit>
             <trans-unit id="yes">
                 <source>yes</source>
