--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -422,9 +422,25 @@
                 <target><![CDATA[
                     <ul>
                         <li>
-                            Kompisbyrån skapar kontakt mellan nya kompisar baserat på gemensamma intressen.
-                            Kompisbyrån ansvarar endast för att matcha ihop personer som har bott i Sverige under kortare tid med
-                            personer som har bott i Sverige länge.
+                            Kompisbyrån förmedlar kontakten mellan personer som är nya i Sverige med personer som har bott 
+                            i Sverige länge. Tanken är att ge dig möjlighet att träffa flera olika personer med annan 
+                            bakgrund än din egen, för att kunna skapa ett socialt nätverk.
+                        </li>
+                        <li>
+                            Kompisbyrån skapar kontakt mellan nya kompisar baserat på liknande intressen. 
+                        </li>
+                        <li>
+                            Du måste kunna träffas i Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås 
+                            eller Örebro.
+                        </li>
+                        <li>
+                            Kompisbyrån ansvarar endast för att matcha ihop personer som har bott i Sverige under kortare tid med 
+                            personer som har bott i Sverige länge. 
+                        </li>
+                        <li>
+                            Utgångspunkten är att en kompisfika eller ett musikmöte med samma person sker en gång. Gillar ni 
+                            varandra får ni gärna träffas igen själva. Vill du träffa en ny fikakompis eller musikkompis, loggar 
+                            du in och gör en ny förfrågan. 
                         </li>
                         <li>
                             Alla över 18 år (myndiga) får delta.
@@ -436,19 +452,19 @@
                             Kompisbyrån rekommenderar att ni träffas ungefär 1 timme på ett offentligt ställe i stadens centrala del.
                         </li>
                         <li>
-                            När du har registrerat din ansökan garanterar du att din information är korrekt och godkänner att
-                            informationen; kan komma att behandlas enligt PUL och hamnar i Kompisbyråns register så att vi kan
-                            hitta nya kompisar till dig, att din information och e-mail skickas till din nya kompis, och att vi
-                            bjuder in dig till Kompisbyråns aktiviteter eller erbjudanden. Om du vill korrigera dina lämnade uppgifter
-                            som finns registrerade hos oss, vänligen logga in med din e-mail och ditt lösenord och uppdatera din profil.
+                            När du har registrerat din ansökan garanterar du att din information är korrekt och godkänner att 
+                            informationen; kan komma att behandlas enligt PUL och hamnar i Kompisbyråns register så att vi kan hitta 
+                            nya kompisar till dig, att din information och e-mail skickas till din nya kompis, och att vi bjuder in 
+                            dig till Kompisbyråns aktiviteter eller erbjudanden. Om du vill korrigera dina lämnade uppgifter som finns 
+                            registrerade hos oss, vänligen logga in med din e-mail och ditt lösenord och uppdatera din profil. 
+                            Personuppgiftsansvarig är Kompisbyråns styrelse.
                         </li>
                         <li>
-                            Vår ambition är att hitta en ny kompis till dig inom 30 dagar, men det kan ta både kortare och längre tid
-                            beroende på din profil och hur många personer som också vill träffa nya kompisar. Det innebär att du kan
-                            få vänta.
+                            Vår ambition är att hitta en ny kompis till dig inom 30 dagar, men det kan ta både kortare och längre tid 
+                            beroende på din profil och hur många personer som också vill träffa nya kompisar. Det innebär att du kan få vänta.
                         </li>
                         <li>
-                            När vi har tagit emot din ansökan, bekräftar vi detta genom att skicka ett e-mail till dig, oftast inom 48 timmar.
+                            När vi har tagit emot din ansökan, bekräftar vi detta genom att skicka ett e-mail till dig.
                         </li>
                         <li>
                             Du bör skicka ett e-mail till din nya fikakompis och bestämma när ni kan träffas inom 7 dagar.
@@ -456,10 +472,6 @@
                         <li>
                             Du måste behandla alla på ett respektfullt sätt. Tänk på att vara tydliga mot varandra då 
                             språkskillnader kan skapa missuppfattningar.
-                        </li>
-                        <li>
-                            En kompisfika eller ett musikmöte sker en gång. Gillar ni varandra får ni gärna träffas igen själva. Vill du träffa en
-                            ny Fikakompis eller Musikkompis, loggar du in och anmäler dig igen.
                         </li>
                         <li>
                             Om du vill avregistrera dig, skicka ett e-mail till kontakt@kompisbyran.se.
