--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -423,32 +423,49 @@
             </trans-unit>
             <trans-unit id="terms.ingress">
                 <source>terms.ingress</source>
-                <target>Kompisbyrån creates contact between people who are new in Sweden and people who have lived in Sweden for a long time.</target>
+                <target>Kompisbyrån creates contact between people who are new in Sweden and people who have lived in Sweden for a long time. 
+                We want to give you the possibility to meet several new persons with another background than yours, in order for you to broaden 
+                your social network.</target>
             </trans-unit>
             <trans-unit id="terms.list">
                 <source>terms.list</source>
                 <target><![CDATA[
                     <ul>
                         <li>
-                            Kompisbyrån creates contact between new friends based on similar interests. Kompisbyrån is only responsible for linking together people who have lived in Sweden for a short time with people who have lived in Sweden for a long time.
+                            Kompisbyrån creates contact between new friends based on similar interests. 
+                        </li>
+                        <li>
+                            You must be able to meet your new Fika or Music friend in one of these cities: Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås or Örebro.
+                        </li>
+                        <li>
+                            Kompisbyrån is only responsible for linking together people who have lived in Sweden for a short time with people who have lived in Sweden for a long time.
+                        </li>
+                        <li>
+                            A meeting with the same person happens one time. Of course, you can together decide if you want to meet again.
+                            If you want to meet a new person, you log in with your email and password and make a new request. 
                         </li>
                         <li>
                             Everyone over 18 years (of age) can participate.
                         </li>
                         <li>
-                            You only have to pay for your own "fika", the registration is for free.
+                            You only have to pay for your own "fika" (for example, a cup of coffee), the registration is for free.
                         </li>
                         <li>
                             Kompisbyrån recommends that you meet your new friend for about 1 hour at a public place in the central part of the city.
                         </li>
                         <li>
-                            When you have registered your application, you warrant that your information is correct and agree that the information: may be treated according to PUL and is saved in Kompisbyrån's register so that we can find new friends for you, that your information and e-mail is sent to your new friend, and that we will invite you to Kompisbyrån's activities or offerings. If you want to adjust your submitted information that is registered, please log in with your e-mail and password and update your profile.
+                            When you have registered your application, you warrant that your information is correct and agree that the information: 
+                            may be treated according to PUL and is saved in Kompisbyrån's register so that we can find new friends for you, that 
+                            your information and e-mail is sent to your new friend, and that we will invite you to Kompisbyrån's activities or 
+                            offerings. If you want to adjust your submitted information that is registered, please log in with your e-mail and 
+                            password and update your profile. Controller of personal data is Kompisbyrån’s Board.
                         </li>
                         <li>
-                            Our ambition is to find a new friend for you within 30 days, but it may take both shorter and longer time depending on your profile and the number of people who also want to meet new friends. That means that you may have to wait.
+                            Our ambition is to find a new friend for you within 30 days, but it may take both shorter and longer time depending 
+                            on your profile and the number of people who also want to meet new friends. That means that you may have to wait.
                         </li>
                         <li>
-                            We confirm that we have received your application, by sending an e-mail to you, often within 48 hours.
+                            We confirm that we have received your application, by sending an e-mail to you.
                         </li>
                         <li>
                             You should send an e-mail to your new friend and decide when and where to meet within 7 days.
@@ -458,16 +475,13 @@
                             with each other as language differences can create misunderstandings. 
                         </li>
                         <li>
-                            A meeting with your Fika or Music friend takes place once. If you like each other, you are welcome to meet again by your own. If you want to meet a new Fika or Music friend, please log in and make a new friend request.
-                        </li>
-                        <li>
                             If you want to delete your account, please send an e-mail to kontakt@kompisbyran.se.
                         </li>
                         <li>
                             Kompisbyrån cannot guarantee that we will find a new friend for you, but we will always do our best.
                         </li>
                         <li>
-                            We wish to constantly improve our work. Therefore, we will send you a follow-up e-mail after your meeting with your new friend.
+                            We wish to constantly improve our work. Therefore, we will contact you after your meeting to follow up.
                         </li>
                     </ul>]]></target>
             </trans-unit>
