--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -543,6 +543,7 @@
                 <target>
                     Thank you for making a Music friend request through Kompisbyrån!
                     We will send you an e-mail as soon as we have found a Music friend for you. Our ambition is to find a friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Music friends.
+                    We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.
 
                     If you have any questions, please send us an e-mail :)
 
