--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -505,6 +505,8 @@
                     <p>Hej!<br /></p>
                     <p>
                         Tack för att du har anmält dig till en kompisfika via Kompisbyrån! Vi mailar dig när vi har hittat en ny Fikakompis som har liknande intressen som du. Vår ambition är att hitta en Fikakompis till dig inom 4 veckor, men det kan ta både kortare och längre tid beroende på din profil och hur många det är som också vill träffa nya Fikakompisar.<br /><br />
+                        Vi vill informera dig om att vi kommer gå ner i tempo nu under sommaren och är tillbaka i augusti i full kapacitet. Vi hoppas kunna hitta en bra matchning till dig snart, och vi hoppas att du vill vänta.
+
                         Om du har några frågor, vänligen skicka ett e-mail till oss :)
                     </p>
                     <p>
@@ -514,7 +516,7 @@
                     <p>----------------------<br /></p>
                     <p>
                         Thank you for making a Fika friend request through Kompisbyrån!<br /><br />
-                        We will send you an e-mail as soon as we have found a new Fika friend for you who has similar interests that you have. Our ambition is to find a Fika friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Fika friends. <br /><br />
+                        We will send you an e-mail as soon as we have found a new Fika friend for you who has similar interests that you have. Our ambition is to find a Fika friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Fika friends. We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.<br /><br />
                     </p>
                     <p>
                         Best regards,<br />
@@ -528,7 +530,8 @@
                     Hej!
 
                     Tack för att du har anmält dig till en kompisfika via Kompisbyrån! Vi mailar dig när vi har hittat en ny Fikakompis som har liknande intressen som du. Vår ambition är att hitta en Fikakompis till dig inom 4 veckor, men det kan ta både kortare och längre tid beroende på din profil och hur många det är som också vill träffa nya Fikakompisar.
-
+                    Vi vill informera dig om att vi kommer gå ner i tempo nu under sommaren och är tillbaka i augusti i full kapacitet. Vi hoppas kunna hitta en bra matchning till dig snart, och vi hoppas att du vill vänta.
+                    
                     Om du har några frågor, vänligen skicka ett e-mail till oss :)
 
                     Bästa hälsningar
@@ -537,6 +540,7 @@
                     ----------------------
                         Thank you for making a Fika friend request through Kompisbyrån!
                         We will send you an e-mail as soon as we have found a new Fika friend for you who has similar interests that you have. Our ambition is to find a Fika friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Fika friends.
+                        We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.
 
                         Best regards,
                         Kompisbyrån
@@ -555,6 +559,8 @@
                         <p>Hej!<br /></p>
                         <p>
                           Tack för att du har anmält dig till Musikkompis! Vi mailar dig när vi har hittat en Musikkompis som passar just dig. Vår ambition är att hitta en Musikkompis till dig inom 4 veckor, men det kan ta både kortare och längre tid beroende på din profil och hur många det är som också vill träffa nya Musikkompisar.<br /><br />
+                            Vi vill informera dig om att vi kommer gå ner i tempo nu under sommaren och är tillbaka i augusti i full kapacitet. Vi hoppas kunna hitta en bra matchning till dig snart, och vi hoppas att du vill vänta.
+
                             Om du har några frågor, vänligen skicka ett e-mail till oss :)
                         </p>
                         <p>
@@ -564,7 +570,7 @@
                         <p>----------------------<br /></p>
                         <p>
                             Thank you for making a Music friend request through Kompisbyrån!<br /><br />
-                            We will send you an e-mail as soon as we have found a new Music friend for you who has similar interests that you have. Our ambition is to find a Music friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Music friends. <br /><br />
+                            We will send you an e-mail as soon as we have found a new Music friend for you who has similar interests that you have. Our ambition is to find a Music friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Music friends. We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait. <br /><br />
                         </p>
                         <p>
                             Best regards,<br />
@@ -577,6 +583,7 @@
                 <target>
                     Thank you for making a Music friend request through Kompisbyrån!
                     We will send you an e-mail as soon as we have found a Music friend for you. Our ambition is to find a friend for you within 2 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Music friends.
+                    We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.
 
                     If you have any questions, please send us an e-mail :)
 
